08_Ingress/fanout/deploy-svc-bar.yml
---
# Deployment(labels(app: bar-app):8080 x 2)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      name: bar-pod
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080

---
# Service(service(bar-svc):8080) -> Deployment(labels(app: bar-app):8080 x 2)
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 8080
    targetPort: 8080
