08_Ingress/fanout/ingress-foo-bar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-svc
            port:
              number: 4200
  - http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-svc
            port:
              number: 8080
